[gd_scene load_steps=19 format=3 uid="uid://cnviuf3qmq26f"]

[ext_resource type="Script" uid="uid://dufq3qd8bqo5y" path="res://core/main.gd" id="1_5vw27"]
[ext_resource type="Texture2D" uid="uid://dx62hcn5hjs1n" path="res://stages/grass.png" id="2_brq4u"]
[ext_resource type="PackedScene" uid="uid://caig5oumsc857" path="res://UI/upgrade_menu.tscn" id="3_4c57u"]
[ext_resource type="Texture2D" uid="uid://b5sjapvyrr6u7" path="res://projectiles/poo.png" id="3_7ua4h"]
[ext_resource type="PackedScene" uid="uid://cgti6mrpdekpx" path="res://UI/customize_menu.tscn" id="4_efxa6"]
[ext_resource type="Shader" uid="uid://b6o0xr86w36i8" path="res://effects/sudden_death.gdshader" id="5_dg77c"]
[ext_resource type="Theme" uid="uid://dh465xlsj7ugx" path="res://UI/Theme.tres" id="6_510js"]
[ext_resource type="Texture2D" uid="uid://cxxncdpnkjj26" path="res://transparent.png" id="6_ycdy4"]
[ext_resource type="FontFile" uid="uid://b2elclwq486ug" path="res://fonts/BackheelFreeTrial-5yz6V.otf" id="7_w48qg"]
[ext_resource type="PackedScene" uid="uid://dr81edv1mxj0r" path="res://UI/leaderboard.tscn" id="8_jsmgm"]
[ext_resource type="AudioStream" uid="uid://bnd7vmemesdbl" path="res://sounds/sudden_death.ogg" id="8_vivmo"]
[ext_resource type="PackedScene" uid="uid://405m25td441q" path="res://UI/menu.tscn" id="8_xhu5d"]
[ext_resource type="PackedScene" uid="uid://2jnj3vk2ckgs" path="res://UI/unlocks.tscn" id="11_rayt5"]
[ext_resource type="AudioStream" uid="uid://dka7jixarevfs" path="res://sounds/special.ogg" id="14_ntwa4"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ntwa4"]
lifetime_randomness = 0.1
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(600, 1, 1)
angle_min = -720.0
angle_max = 720.0
gravity = Vector3(0, 98, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vp4v2"]
size = Vector2(1174, 20)

[sub_resource type="LabelSettings" id="LabelSettings_7ua4h"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8pr8v"]
shader = ExtResource("5_dg77c")
shader_parameter/Speed = 2.0
shader_parameter/LineLength = 2.0
shader_parameter/LineColor = Color(1, 0.176471, 0.113725, 1)
shader_parameter/Softness = 0.237
shader_parameter/Weirdness = 0.426
shader_parameter/Radius = 1.279
shader_parameter/Freq = 10.0

[node name="Game" type="Node2D"]
script = ExtResource("1_5vw27")
debug_mode = false

[node name="Background" type="TextureRect" parent="."]
z_index = -99
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -595.0
offset_top = -360.0
offset_right = 1786.0
offset_bottom = 1083.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_brq4u")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="GameEndParticles" type="GPUParticles2D" parent="."]
z_index = 999
position = Vector2(556, 0)
emitting = false
amount = 60
texture = ExtResource("3_7ua4h")
lifetime = 4.0
randomness = 0.12
process_material = SubResource("ParticleProcessMaterial_ntwa4")

[node name="Walls" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls"]
position = Vector2(577, 47)
shape = SubResource("RectangleShape2D_vp4v2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Walls"]
position = Vector2(577, 602)
shape = SubResource("RectangleShape2D_vp4v2")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Walls"]
position = Vector2(43, 322)
rotation = -1.57155
scale = Vector2(0.560061, 1)
shape = SubResource("RectangleShape2D_vp4v2")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Walls"]
position = Vector2(1106, 321)
rotation = -1.57155
scale = Vector2(0.560061, 1)
shape = SubResource("RectangleShape2D_vp4v2")

[node name="Players" type="Node" parent="."]

[node name="RoundOverDelayTimer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[node name="UpgradeOverDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="SuddenDeathTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
process_mode = 3
position = Vector2(575, 325)

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="SuddenDeathLabel" type="RichTextLabel" parent="Camera2D/CanvasLayer"]
process_mode = 3
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -555.0
offset_top = -84.0
offset_right = 555.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(404, 68)
theme_override_colors/default_color = Color(1, 0.140412, 0.252668, 1)
theme_override_colors/font_outline_color = Color(0.273438, 0.0588808, 0.0466346, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 20
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 47
theme_override_fonts/italics_font = ExtResource("7_w48qg")
theme_override_font_sizes/italics_font_size = 150
bbcode_enabled = true
text = "
[i][shake rate=60.0 level=45]SUDDEN DEATH
"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1

[node name="Rankings" type="Label" parent="Camera2D/CanvasLayer"]
visible = false
offset_left = 5.0
offset_top = 34.0
offset_right = 45.0
offset_bottom = 57.0
theme_override_font_sizes/font_size = 10

[node name="UpgradePanel" parent="Camera2D/CanvasLayer" instance=ExtResource("3_4c57u")]
visible = false
metadata/_edit_lock_ = true

[node name="CustomizeMenu" parent="Camera2D/CanvasLayer" instance=ExtResource("4_efxa6")]

[node name="RoundLabel" type="Label" parent="Camera2D/CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme = ExtResource("6_510js")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
label_settings = SubResource("LabelSettings_7ua4h")
vertical_alignment = 1

[node name="WinnersLabel" type="Label" parent="Camera2D/CanvasLayer"]
visible = false
offset_left = 128.0
offset_top = 173.0
offset_right = 1001.0
offset_bottom = 314.0
size_flags_horizontal = 4
theme = ExtResource("6_510js")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 50
text = "WINNER! Press START to play again
"
horizontal_alignment = 1

[node name="Specials" type="HBoxContainer" parent="Camera2D/CanvasLayer"]
visible = false
offset_left = 3.0
offset_top = 609.0
offset_right = 1154.0
offset_bottom = 649.0
theme = ExtResource("6_510js")
theme_override_constants/separation = 25
alignment = 1

[node name="Special1" type="Label" parent="Camera2D/CanvasLayer/Specials"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 22

[node name="Special2" type="Label" parent="Camera2D/CanvasLayer/Specials"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 22

[node name="Special3" type="Label" parent="Camera2D/CanvasLayer/Specials"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 22

[node name="Special4" type="Label" parent="Camera2D/CanvasLayer/Specials"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 22

[node name="Menu" parent="Camera2D/CanvasLayer" instance=ExtResource("8_xhu5d")]

[node name="Leaderboard" parent="Camera2D/CanvasLayer" instance=ExtResource("8_jsmgm")]

[node name="SuddenDeath" type="Sprite2D" parent="Camera2D/CanvasLayer"]
process_mode = 3
material = SubResource("ShaderMaterial_8pr8v")
scale = Vector2(1153.78, 650)
texture = ExtResource("6_ycdy4")
centered = false

[node name="AudioStreamPlayerLoop" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("8_vivmo")
parameters/looping = true

[node name="AudioStreamPlayerSingle" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("8_vivmo")

[node name="PauseTimer" type="Timer" parent="."]
process_mode = 2

[node name="Unlocks" parent="." instance=ExtResource("11_rayt5")]
visible = false

[node name="AudioStreamPlayerSpecial" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_ntwa4")

[connection signal="timeout" from="RoundOverDelayTimer" to="." method="_on_round_over_delay_timer_timeout"]
[connection signal="timeout" from="UpgradeOverDelayTimer" to="." method="_on_upgrade_over_delay_timer_timeout"]
[connection signal="timeout" from="SuddenDeathTimer" to="." method="_on_sudden_death_timer_timeout"]
